--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@testing-library/user-event": "^12.8.3",
         "axios": "^0.23.0",
         "boostrap": "^2.0.0",
+        "google-auth-library": "^7.10.0",
         "jquery": "^3.6.0",
         "node-sass": "^4.14.1",
         "react": "^17.0.2",
