--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
         "@testing-library/user-event": "^12.8.3",
         "axios": "^0.23.0",
         "boostrap": "^2.0.0",
+        "dotenv": "^10.0.0",
         "google-auth-library": "^7.10.0",
         "jquery": "^3.6.0",
         "node-sass": "^4.14.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-google-login": "^5.2.2",
+        "react-hook-form": "^7.17.5",
         "react-router-dom": "^5.3.0",
         "react-scripts": "4.0.3",
         "sweetalert": "^2.1.2",
